[tool.poetry]
name = "Temperature Alert Agent"
version = "0.1.0"
description = "A starter template for creating temperature alerts"
authors = ["Vaishnavi Sarmalkar", "Rohit Wahwal", "Prerna Chheda", "Manish Patil"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-search-results = "^2.4.2"
uagents = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
